<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_InfeedCommand" Id="{480a2c3d-4f6c-42ee-9693-75f364808c87}">
    <Declaration><![CDATA[TYPE ST_InfeedCommand :
	STRUCT
		StartConveyor : BOOL;
		StopConveyor  : BOOL;
	END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>