<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_InfeedConfig" Id="{96ea092c-d4df-49e8-aab1-433267b08497}">
    <Declaration><![CDATA[TYPE ST_InfeedConfig :
	STRUCT
	END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>