<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_InfeedStatus" Id="{448395b4-4e11-452f-9da3-51f01c430932}">
    <Declaration><![CDATA[TYPE ST_InfeedStatus :
	STRUCT
		ConveyorRunning : BOOL;
	END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>